tag align fix

--- a/twitch/twitch_design_fix.user.css
+++ b/twitch/twitch_design_fix.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           twitch.tv Design Fix
 @namespace      nerblo
-@version        1.2.8
+@version        1.2.9
 @author         nerblo
 @license        CC-BY-SA-4.0
 @description    Fix for Twitch latest Design changes, you should use FFZ!
@@ -45,6 +45,9 @@
     }
     .tw-tag {
         background-color: transparent !important;
+    }
+    .channel-info-content .tw-mg-b-05{
+        margin-bottom:2px !important;
     }
     .chat-input__textarea textarea {
         font-size: 1.39rem !important;
